added cities section

--- a/index.html
+++ b/index.html
@@ -149,19 +149,16 @@
                 <img src="./Resources/css/images/lisbon-3.jpg" alt="Lisbon">
                 <h3>Lisbon</h3>
                 <div class="city-feature">
-                    <icon class="ion-ios-person">
+                    <icon class="ion-ios-person icon-small"></icon>
                         1600+ happy eaters
-                    </icon>
                 </div>
                 <div class="city-feature">
-                    <icon class="ion-ios-star">
+                    <icon class="ion-ios-star icon-small"></icon>
                         60+ top chefs
-                    </icon>
                 </div>
                 <div class="city-feature">
-                    <icon class="ion-social-twitter">
-                        @omnifood_lx
-                    </icon>
+                    <icon class="ion-social-twitter icon-small"></icon>
+                       <a href="#">@omnifood_lx</a>
                 </div>     
             </div>
 
@@ -169,19 +166,16 @@
                 <img src="./Resources/css/images/san-francisco.jpg" alt="san-francisco">
                 <h3>San Francisco</h3>
                 <div class="city-feature">
-                    <icon class="ion-ios-person">
-                        3700+ happy eaters
-                    </icon>
+                    <icon class="ion-ios-person icon-small"></icon>
+                        3700+ happy eaters                   
                 </div>
                 <div class="city-feature">
-                    <icon class="ion-ios-star">
-                        160+ top chefs
-                    </icon>
+                    <icon class="ion-ios-star icon-small"></icon>
+                        160+ top chefs             
                 </div>
                 <div class="city-feature">
-                    <icon class="ion-social-twitter">
-                        @omnifood_sf
-                    </icon>
+                    <icon class="ion-social-twitter icon-small"></icon>
+                      <a href="#">@omnifood_sf</a> 
                 </div>     
             </div>
 
@@ -189,19 +183,16 @@
                 <img src="./Resources/css/images/berlin.jpg" alt="berlin">
                 <h3>Berlin</h3>
                 <div class="city-feature">
-                    <icon class="ion-ios-person">
+                    <icon class="ion-ios-person icon-small"></icon>
                         2300+ happy eaters
-                    </icon>
                 </div>
                 <div class="city-feature">
-                    <icon class="ion-ios-star">
+                    <icon class="ion-ios-star icon-small"></icon>
                         1100+ top chefs
-                    </icon>
                 </div>
                 <div class="city-feature">
-                    <icon class="ion-social-twitter">
-                        @omnifood_berlin
-                    </icon>
+                    <icon class="ion-social-twitter icon-small"></icon>
+                       <a href="#">@omnifood_berlin</a> 
                 </div>     
             </div>
 
@@ -209,19 +200,16 @@
                 <img src="./Resources/css/images/london.jpg" alt="London">
                 <h3>London</h3>
                 <div class="city-feature">
-                    <icon class="ion-ios-person">
+                    <icon class="ion-ios-person icon-small"></icon>
                         1200+ happy eaters
-                    </icon>
                 </div>
                 <div class="city-feature">
-                    <icon class="ion-ios-star">
+                    <icon class="ion-ios-star icon-small"></icon>
                         50+ top chefs
-                    </icon>
                 </div>
                 <div class="city-feature">
-                    <icon class="ion-social-twitter">
-                        @omnifood_london
-                    </icon>
+                    <icon class="ion-social-twitter icon-small"></icon>
+                    <a href="#">@omnifood_london</a>
                 </div>     
             </div>
         </div>
