--- a/index.html
+++ b/index.html
@@ -214,6 +214,33 @@
             </div>
         </div>
     </section>
+
+    <section class="section-testimonials">
+        <div class="row">
+            <h2>Our customers can't live without us</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-3">
+                <blockquote>
+                    Omnifood is just awesome. I just launched a startup which leaves me no time for cooking, so onmnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+                    <cite> <img src="./Resources/css/images/customer-1.jpg" alt="Alberto Duncan">  Alberto Duncan</cite>
+                </blockquote>
+            </div>
+            <div class="col span-1-of-3">
+                <blockquote>
+                    Omnifood is just awesome. I just launched a startup which leaves me no time for cooking, so onmnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+                    <cite> <img src="./Resources/css/images/customer-2.jpg" alt="Alberto Duncan">  Alberto Duncan</cite>
+                </blockquote>
+            </div>
+            <div class="col span-1-of-3">
+                <blockquote>
+                    Omnifood is just awesome. I just launched a startup which leaves me no time for cooking, so onmnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+                    <cite> <img src="./Resources/css/images/customer-3.jpg" alt="Alberto Duncan">  Alberto Duncan</cite>
+                </blockquote>
+            </div>
+        </div>
+
+    </section>
     
 </body>
 </html>
